--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Sat Jun 12 15:29:36 BRT 2010
+#Sun Jun 13 02:21:36 BRT 2010
 app.grails.version=1.3.1
 app.name=LMGer
 app.servlet.version=2.4
 app.version=0.1
+plugins.acegi=0.5.3
 plugins.hibernate=1.3.1
 plugins.tomcat=1.3.1
